<resources>
    <string name="app_name">EK Voice</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="Savebutton">Save</string>
    <string name="AddNote">Add Note</string>
    <string name="Cancelbutton" />
    <string name="Cancel">Cancel</string>
    <string name="ReportNum">Report Number:</string>
    <string name="ReportNumber">Report Number:</string>
    <string name="AddContact">Add Contact</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">ADDRESS</string>
    <string name="email_title" translatable="false">EMAIL</string>
    <string name="email" translatable="false">blah@gmail.com</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="phone_title" translatable="false">PHONE</string>
    <string name="phone" translatable="false">(408)111-2233</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
