<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="5dp"
    android:visibility="gone" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </RelativeLayout>
    <LinearLayout
        android:background="@drawable/rounded_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/content_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/content_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_name_mock"
                android:textColor="#649fe5"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_below="@+id/content_avatar"
                android:layout_alignParentStart="true"
                android:paddingBottom="10dp" />

        </RelativeLayout>

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add\nNote"
            android:id="@+id/button11"
            android:layout_gravity="right"
            android:textColor="#649fe5"
            android:background="#ffffff"
            android:drawableRight="@mipmap/addnote"
            android:layout_marginTop="-45dp"
            android:paddingRight="-2dp"
            android:focusable="false"/>
        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COMPANY"
            android:id="@+id/textView9"
            style="@style/ContentMainBadgeTitle" />

        <TextView
            android:id="@+id/content_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_from1_mock"
            android:textColor="@color/dim_foreground_material_light"
            android:textSize="16sp"
            android:paddingTop="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_from_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/from_badge"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/content_from_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/content_from_badge"
                    android:layout_below="@+id/content_from_badge"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/dim_foreground_material_light"
                    android:textSize="16sp"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/content_from_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/content_from_address_1"
                    android:layout_below="@+id/content_from_address_1"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/dim_foreground_material_light"
                    android:textSize="14sp"
                    android:paddingBottom="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_to_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    />

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/content_delivery_date_badge"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/email_title"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView10"
            android:textSize="16dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <TextView
            android:id="@+id/content_deadline_badge"
            style="@style/ContentMainBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/phone_title"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/content_phone_number"
            android:layout_width="wrap_content"
            android:textColorHighlight="#649fe5"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/content_deadline_badge"
            android:layout_below="@id/content_deadline_badge"
            android:text="@string/phone"
            android:textColor="@color/background_material_dark"
            android:textSize="16sp"
            android:textColorHint="#649fe5"
            android:textColorLink="#649fe5" />


    </LinearLayout>

</LinearLayout>