<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="datacare.ekvoice.NoteActivity"
    android:background="#ffffff"
    android:id="@+id/relativeLayout1">

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/frameLayout"
        android:background="#649fe5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Savebutton"
            android:id="@+id/addNoteSave"
            android:layout_gravity="right|bottom"
            android:drawablePadding="5dp"
            android:textColor="#ffffff"
            android:background="#649fe5"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="18dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/button10"
            android:onClick="cancelButton"
            android:layout_gravity="left|bottom"
            android:drawablePadding="5dp"
            android:textColor="#ffffff"
            android:background="#649fe5"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="3dp"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddNote"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp" />
    </FrameLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_below="@+id/frameLayout">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/relativeLayout2"
            android:layout_below="@+id/frameLayout"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/linearLayout"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Voice-to-text"
                    android:id="@+id/textView17"
                    android:textColor="#0a0a0a" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New ToggleButton"
                    android:id="@+id/toggleButton"
                    android:textColor="#0a0a0a" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_alignParentStart="true"
                android:layout_marginTop="40dp"
                android:id="@+id/linearLayout2">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/ReportNumber"
                android:id="@+id/textView8"
                android:textColor="#0a0a0a"
                android:textSize="16dp"
                android:layout_below="@+id/imageView5"
                android:layout_toEndOf="@+id/linearLayout2" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteEditText"
                android:maxLines = "20"
                android:scrollbars = "vertical"
                android:hint="Add note here"
                android:gravity="top"
                android:textColorHint="#cfcece"
                android:background="@android:color/transparent"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingRight="16dp"
                android:layout_below="@+id/imageView4"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="UR1"
                android:id="@+id/textView16"
                android:textSize="14dp"
                android:layout_marginRight="-35dp"
                android:layout_alignBottom="@+id/textView8"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"

                android:text="Time: "
                android:id="@+id/textView14"
                android:textSize="25dp"
                android:textColor="#0a0a0a"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/linearLayout2"
                android:layout_toEndOf="@+id/linearLayout2"
                android:layout_marginTop="-20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/contentDividerLine"
                android:id="@+id/imageView5"
                android:layout_below="@+id/addNoteAddContact"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteAddContact"
                android:background="@mipmap/plus_icon"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/imageView6"
                android:layout_alignEnd="@+id/textView8"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteCallButton"
                android:background="@mipmap/phone_icon"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/imageView6"
                android:layout_alignStart="@+id/textView14"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/contentDividerLine"
                android:id="@+id/imageView4"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:id="@+id/timerValue"
                android:textSize="20dp"
                android:layout_alignTop="@+id/textView14"
                android:layout_toEndOf="@+id/textView14"
                android:layout_marginTop="4dp"
                android:textColor="#050505" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/contentDividerLine"
                android:id="@+id/imageView6"
                android:layout_below="@+id/textView14"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteContactName"
                android:textSize="18dp"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_marginRight="5dp"
                android:layout_below="@+id/imageView6"
                android:layout_alignEnd="@+id/timerButton" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteContactPhone"
                android:textSize="12dp"
                android:textColor="@color/abc_secondary_text_material_light"
                android:layout_alignBottom="@+id/addNoteAddContact"
                android:layout_alignEnd="@+id/addNoteContactEmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addNoteContactEmail"
                android:textSize="12dp"
                android:textColor="@color/abc_secondary_text_material_light"
                android:layout_marginRight="5dp"
                android:layout_above="@+id/addNoteContactPhone"
                android:layout_alignEnd="@+id/timerButton" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timerButton"
                android:elevation="3dp"
                android:checked="false"
                android:textOn="Stop Timer"
                android:textOff="Start Timer"
                android:layout_below="@+id/linearLayout"
                android:layout_alignEnd="@+id/addNoteEditText"
                android:layout_marginTop="5dp" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
